corrections csspage erreur

--- a/erreur.html
+++ b/erreur.html
@@ -27,7 +27,7 @@
         include_once("accessoires/header.html");//logo du site
         include_once("accessoires/menu.html");//barre de menu
     ?>
-    <div class="container well">
+    <div class="col-md-10 col-lg-offset-1 contenu">
         <img class="img-responsive" src="/images/icone_site/<?= $imgError ?>" alt="Erreur <?= $_GET['id'] ?>"/>
     </div>
     <?php
