--- a/actualite.html
+++ b/actualite.html
@@ -119,7 +119,7 @@
                                         <?php } ?>
                                     <?php } ?>
                                 </div>
-                                <ul id="ScrollBar">
+                                <ul class="ScrollBar">
                                     <?php for($j=0 ; $j<$inscription_event[$i] ; $j++) { ?>
                                     <?php if(isset($id_user_inscrit[$j][$i])) { ?><!--On affiche les personnes inscrite-->
                                     <li>
@@ -137,7 +137,7 @@
                                 </ul>
                                 <script>
                                     $(document).ready(function ($) {
-                                        $('#ScrollBar').perfectScrollbar(/*{wheelSpeed: 5}*/);
+                                        $('.ScrollBar').perfectScrollbar(/*{wheelSpeed: 5}*/);
                                     });
                                 </script>
                             </div>
