--- a/admin/main/maintenance.html
+++ b/admin/main/maintenance.html
@@ -6,7 +6,7 @@
         <th style="  width: 15%;">Nom d'utilisateur</th>
         <th style="  width: 20%;">Date</th>
         <th>Action</th>
-        <th style="  width: 50px;">Cocher</th>
+        <th style="  width: 50px;">Cocher<input type="checkbox" onclick="CocheTout(this, 'mark[]');" name="select_all"/></th>
     </tr>
     <?php
         $i=0;
@@ -22,3 +22,20 @@
             } ?>
 </table>
 <div> <?php if($nb_page > 1)include("../accessoires/page.html"); ?></div>
+<script>
+    function CocheTout(ref, name) {
+        var form = ref;
+
+        while (form.parentNode && form.nodeName.toLowerCase() != 'form'){
+            form = form.parentNode;
+        }
+
+        var elements = form.getElementsByTagName('input');
+
+        for (var i = 0; i < elements.length; i++) {
+            if (elements[i].type == 'checkbox' && elements[i].name == name) {
+                elements[i].checked = ref.checked;
+            }
+        }
+    }
+</script>
