--- a/admin/main/maintenance.html
+++ b/admin/main/maintenance.html
@@ -1,7 +1,7 @@
 <h1><?php echo $titre_maintenance; ?></h1>
 <p><?php echo $text_maintenance; ?></p>
 <div> <?php if($nb_page > 1)include_once("../accessoires/page.html"); ?></div>
-<table class="table">
+<table class="table1">
     <tr>
         <th style="  width: 15%;">Nom d'utilisateur</th>
         <th style="  width: 20%;">Date</th>
@@ -13,7 +13,7 @@
          while (isset($id_historique[$i]))
             { ?>
                 <tr>
-                    <td><img src="../images/avatars/<?php echo $avatar_historique[$i]; ?>" width="40" height="40" alt="avatar_user"> </img><?php echo $pseudo_historique[$i]; ?> </td>
+                    <td><img src="../images/avatars/<?php echo $avatar_historique[$i]; ?>" width="40" height="40" alt="avatar_user"> </img><strong><?php echo $pseudo_historique[$i]; ?></strong></td>
                     <td><?php echo $date_historique[$i]; ?></td>
                     <td><strong><?php echo $text_historique[$i]; ?></strong></td>
                     <td style="text-align: center;"><input style="" type="checkbox" name="mark[]" value="<?php echo $id_historique[$i]; ?>" ></input></td>
