Ajout du système pour supprimer tout ou les selections dans la partie maintenance Ajout du tri

--- a/accessoires/page.html
+++ b/accessoires/page.html
@@ -1,4 +1,4 @@
-<div class="pagination_right">
+<fieldset class="pagination_right">
     <?php if($page > 1){ ?>
         <a href="<?php echo $fichier.'&page='.($page-1); ?>">
             <div class="num_page">
@@ -22,4 +22,4 @@
             </div>
         </a>
     <?php } ?>
-</div>
+</fieldset>
