--- a/liste_jeu.html
+++ b/liste_jeu.html
@@ -34,10 +34,10 @@
                     <span class=""><?php echo $libelle_type_jeu; ?></span>
                 </h3>
                 <div class="col-md-10 main">
-                <form method="GET" action="<?php echo $fichier; ?>">
+                <form method="POST" action="<?php echo $fichier; ?>">
                     <div class="pagination_top">
                         <?php
-                            include_once("accessoires/view.html");
+                            include_once("accessoires/tri.html");
                             if($nb_page > 1)
                             {
                                 include_once("accessoires/page.html");
@@ -53,7 +53,7 @@
                             { ?>
                                 <article class="media liste_jeu">
                                     <div class="media-mod media-img-left col-md-3 col-sm-3 col-xs-3">
-                                        <img class="img-responsive" src="images/jeux/<?= $image_jeu[$i];?>.png" alt="..."/>
+                                        <img class="img-responsive" src="images/jeux/<?= $image_jeu[$i];?>" alt="..."/>
                                     </div>
                                     <div class="media-mod col-md-9 col-sm-9 col-xs-9">
                                         <h4 class="media-heading" >
@@ -69,7 +69,7 @@
                             } ?>
                         <div class="pagination_bottom">
                             <?php
-                                include("accessoires/view.html");
+                                include_once("accessoires/view.html");
                                 if($nb_page > 1)
                                 {
                                     include("accessoires/page.html");
