--- a/accessoires/supprimer.html
+++ b/accessoires/supprimer.html
@@ -3,7 +3,7 @@
     <input class="button2" type="submit" name="delall" value="Tout supprimer">&nbsp;
     <input class="button2" type="submit" name="delmarked" value="Supprimer la sélection"><br>
     <p class="small">
-        <a href="#" onclick="marklist('list', 'mark', true); return false;">Tout cocher</a> • <a href="#" onclick="marklist('list', 'mark', false); return false;">Tout décocher</a>
+        <a href="#">Tout cocher</a> • <a href="#">Tout décocher</a>
     </p>
 
     <div>
