--- a/accessoires/header.html
+++ b/accessoires/header.html
@@ -1,3 +1,3 @@
 <div class="page-header">
-	<h1 class="machiavel"><a href="index.php" style="text-decoration: none; color:#333;">Machiavel Fantasy </a><small></small></h1>
+	<h1 class="machiavel"><a href="index.php">Machiavel Fantasy </a><small></small></h1>
 </div>
