--- a/index.html
+++ b/index.html
@@ -29,65 +29,66 @@
 			include_once("accessoires/menu.html");//barre de menu
 		?>
 		<div class="col-lg-offset-1 col-md-10 contenu espace_accueil">
-            <?php include_once("accessoires/carousel.html");//carousel ?>
-
-
-                <article class="bloc_accueil espace_accueil tbl1"><!-- Le club -->
-                    <div class="lien_accueil image boxFULL">
-                        <p style="margin:0;" class="image_accueil">
-                            <img src="images/icone_site/machiavel_fantasy.jpg" alt="club"></img>
-                        </p>
-                        <a class="desc" style="text-decoration:none;" href="club.php" >
-                            <p style="text-align:justify;">
-                                <b style="font-size:115%;padding:5px 0;">Le club</b><br/>
-                                Coactique aliquotiens nostri pedites ad eos persequendos scandere clivos sublimes etiam si lapsantibus plantis fruticeta prensando vej.
-                            </p>
-                        </a>
-                    </div>
-                </article>
-
-                <article class="bloc_accueil espace_accueil tbl1"><!--Nos jeux-->
-                    <div class="lien_accueil image boxFULL">
-                        <p style="margin:0;" class="image_accueil">
-                            <img src="images/icone_site/jeu-de-des.jpg" alt="jeux"> </img>
-                        </p>
-                        <a class="desc" style="text-decoration:none;" href="description.php" >
-                            <p style="text-align:justify;">
-                                <b style="font-size:115%;padding:5px 0;">Nos jeux</b><br/>
-                                Coactique aliquotiens nostri pedites ad eos persequendos scandere clivos sublimes etiam si lapsantibus plantis fruticeta prensando vej.
-                            </p>
-                        </a>
-                    </div>
-                </article>
-
-                <article class="bloc_accueil espace_accueil tbl1"><!-- L'agenda -->
-                    <div class="lien_accueil image boxFULL">
-                        <p style="margin:0;" class="image_accueil">
-                            <img src="images/icone_site/calendrier.jpg" alt="calendrier"></img>
-                        </p>
-                        <a class="desc" style="text-decoration:none;" href="actualite.php" >
-                            <p style="text-align:justify;">
-                                <b style="font-size:115%;padding:5px 0;">L'agenda</b><br/>
-                                Coactique aliquotiens nostri pedites ad eos persequendos scandere clivos sublimes etiam si lapsantibus plantis fruticeta prensando vej.
-                            </p>
-                        </a>
-                    </div>
-                </article>
-
-                <article class="bloc_accueil espace_accueil tbl1"><!-- Le forum -->
-                    <div class="lien_accueil image boxFULL">
-                        <p style="margin:0;" class="image_accueil">
-                            <img src="images/icone_site/forum.png" alt="forum"></img>
-                        </p>
-                        <a class="desc" style="text-decoration:none;" href="forum/" >
-                            <p style="text-align:justify;">
-                                <b style="font-size:115%;padding:5px 0;">Le forum</b><br/>
-                                Coactique aliquotiens nostri pedites ad eos persequendos scandere clivos sublimes etiam si lapsantibus plantis fruticeta prensando vej.
-                            </p>
-                        </a>
-                    </div>
-                </article>
+            <div class="espace_accueil">
+                <?php include_once("accessoires/carousel.html");//carousel ?>
             </div>
+
+            <div class="bloc_accueil espace_accueil tbl1"><!-- Le club -->
+                <div class="lien_accueil image boxFULL">
+                    <p style="margin:0;" class="image_accueil">
+                        <img src="images/icone_site/machiavel_fantasy.jpg" alt="club"></img>
+                    </p>
+                    <a class="desc" style="text-decoration:none;" href="club.php" >
+                        <p style="text-align:justify;">
+                            <b style="font-size:115%;padding:5px 0;">Le club</b><br/>
+                            Coactique aliquotiens nostri pedites ad eos persequendos scandere clivos sublimes etiam si lapsantibus plantis fruticeta prensando vej.
+                        </p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="bloc_accueil espace_accueil tbl1"><!--Nos jeux-->
+                <div class="lien_accueil image boxFULL">
+                    <p style="margin:0;" class="image_accueil">
+                        <img src="images/icone_site/jeu-de-des.jpg" alt="jeux"> </img>
+                    </p>
+                    <a class="desc" style="text-decoration:none;" href="description.php" >
+                        <p style="text-align:justify;">
+                            <b style="font-size:115%;padding:5px 0;">Nos jeux</b><br/>
+                            Coactique aliquotiens nostri pedites ad eos persequendos scandere clivos sublimes etiam si lapsantibus plantis fruticeta prensando vej.
+                        </p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="bloc_accueil espace_accueil tbl1"><!-- L'agenda -->
+                <div class="lien_accueil image boxFULL">
+                    <p style="margin:0;" class="image_accueil">
+                        <img src="images/icone_site/calendrier.jpg" alt="calendrier"></img>
+                    </p>
+                    <a class="desc" style="text-decoration:none;" href="actualite.php" >
+                        <p style="text-align:justify;">
+                            <b style="font-size:115%;padding:5px 0;">L'agenda</b><br/>
+                            Coactique aliquotiens nostri pedites ad eos persequendos scandere clivos sublimes etiam si lapsantibus plantis fruticeta prensando vej.
+                        </p>
+                    </a>
+                </div>
+            </div>
+
+            <div class="bloc_accueil espace_accueil tbl1"><!-- Le forum -->
+                <div class="lien_accueil image boxFULL">
+                    <p style="margin:0;" class="image_accueil">
+                        <img src="images/icone_site/forum.png" alt="forum"></img>
+                    </p>
+                    <a class="desc" style="text-decoration:none;" href="forum/" >
+                        <p style="text-align:justify;">
+                            <b style="font-size:115%;padding:5px 0;">Le forum</b><br/>
+                            Coactique aliquotiens nostri pedites ad eos persequendos scandere clivos sublimes etiam si lapsantibus plantis fruticeta prensando vej.
+                        </p>
+                    </a>
+                </div>
+            </div>
+        </div>
 		<?php
 			include_once("accessoires/footer.html");
 		?>
